# aqos

./: .env.example  README.md  pyproject.toml  requirements.txt
config/: development.yaml  production.yaml  research.yaml
docs/: API.md  CHANGELOG.md  CODEBASE.md  CONTRIBUTING.md  DECISIONS.md  ENHANCEMENTS.md  PROJECT_STATE.md  RESEARCH.md  STYLE_GUIDE.md  TESTING.md  architecture.md  roadmap.md
src/aqos/: __init__.py  cli.py  main.py  version.py
src/aqos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/integration/: conftest.py  test_backtest_evaluation_integration.py  test_common_utilities_adoption.py  test_core.py  test_data_to_features_integration.py  test_feature_pipeline.py  test_features.py  test_full_trade_workflow_integration.py  test_market_strategy_risk_integration.py  test_research_memory_integration.py  test_services_to_agents_integration.py  test_system_integration_scaffold.py
tests/unit/: test_agent_base.py  test_agent_interface.py  test_agent_orchestrator.py  test_agents_exports.py  test_api_evaluation.py  test_api_execution.py  test_api_exports.py  test_api_health.py  test_api_interface.py  test_api_market.py  test_api_memory.py  test_api_orchestrator.py  test_api_research.py  test_api_responses.py  test_api_risk.py  test_api_strategy.py  test_backtest.py  test_backtest_service.py  test_base_model.py  test_bootstrap.py  test_broker.py  test_brokers_account.py  test_brokers_exchange_http.py  test_brokers_exports.py  (+229 more)
tmp/: aqos_codebase_reality_audit.json  aqos_codebase_reality_audit.md  aqos_local_dashboard.json
(+254 files in other folders)
