[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aqos"
version = "0.1.0"
description = "AI Quant Operating System"
authors = [
    { name = "Zohaib Hussain" }
]
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]